[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rustls = "0.20"
tokio-rustls = "0.23"
x509-parser = "0.9.0"
webpki = "0.22"
webpki-roots = "0.22"
serde_json = "1.0"
actix-cors = "0.6"  # Add this line
